# rust-cli-template

./: .genignore  Cargo.toml  README.md  cargo-generate.toml
.github/workflows/: ci.yml  generate.yml
src/: main.rs
