[package]
edition = "2018"
name = "{{project-name}}"
version = "0.0.0"
authors = ["{{authors}}"]
description = "Rust template for CLI tools."
publish = false
readme = "README.md"
keywords = []
categories = []
license = "CC0-1.0"
repository = "https://github.com/qryxip/rust-cli-template"

[dependencies]
anyhow = "1.0.18"
atty = "0.2.13"
structopt = "0.3.3"
strum = { version = "0.16.0", features = ["derive"] }
tracing = "0.1.10"
tracing-subscriber = "0.1.6"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"
winapi-util = "0.1.2"
