[package]
edition = "2018"
name = "{{project-name}}"
version = "0.0.0"
authors = ["{{authors}}"]
# description = "Rust template for CLI tools."
publish = false
readme = "README.md"
keywords = []
categories = []
# license = ""
# repository = "https://github.com/qryxip/{{project-name}}"

[dependencies]
